@@ -199,6 +199,70 @@ describe("jasmineMatchers", function(){
 
 		});
 
+		describe(".toBeSealed()", function(){
+
+			var matcher;
+			beforeEach(function(){
+				matcher = jasmineMatchers.toBeSealed();
+			});
+
+			describe("Given an object", function(){
+
+				describe("Matches if:", function(){
+
+					it("The object is sealed", function(){
+						var actual = {};
+						Object.seal(actual);
+						var result = matcher.compare(actual);
+						expect(result.pass).toBe(true);
+					});
+
+				});
+
+				describe("Fails if the object is:", function(){
+
+					it("not sealed", function(){
+						var result = matcher.compare({});
+						expect(result.pass).toBe(false);
+						expect(result.message).toBe("Expected: [object Object] to be sealed");
+					});
+
+					it("null", function(){
+						var result = matcher.compare(null);
+						expect(result.pass).toBe(false);
+						expect(result.message).toBe("Expected: null to be sealed");
+					});
+
+					it("undefined", function(){
+						var result = matcher.compare(undefined);
+						expect(result.pass).toBe(false);
+						expect(result.message).toBe("Expected: undefined to be sealed");
+					});
+
+					it("a boolean", function(){
+						var trueResult = matcher.compare(true);
+						expect(trueResult.pass).toBe(false);
+						expect(trueResult.message).toBe("Expected: true to be sealed");
+						var falseResult = matcher.compare(false);
+						expect(falseResult.pass).toBe(false);
+						expect(falseResult.message).toBe("Expected: false to be sealed");
+					});
+
+					it("a number or a string", function(){
+						var stringResult = matcher.compare("test");
+						expect(stringResult.pass).toBe(false);
+						expect(stringResult.message).toBe("Expected: test to be sealed");
+						var numberResult = matcher.compare(9);
+						expect(numberResult.pass).toBe(false);
+						expect(numberResult.message).toBe("Expected: 9 to be sealed");
+					});
+
+				});
+
+			});
+
+		});
+
 		describe(".toBeTrue()", function(){
 
 			var matcher;
