@@ -3,7 +3,6 @@ Release 0.4
 ADDITIONAL MATCHERS:
 
 - toBeFrozen()
-- toBeSealed()
 
 
 VERSION 2.0
